crates/darius-tui/src/snapshots/darius_tui__render__tests__composer_80x6.snap
---
source: crates/darius-tui/src/render.rs
expression: buffer_to_string(&buffer)
---

──────────────────────────────────────────────────────────────────────────────
❯ hello world
──────────────────────────────────────────────────────────────────────────────
⏵⏵ auto mode on (shift+tab to cycle) · ? for shortcuts
