crates/darius-tui/src/snapshots/darius_tui__render__tests__palette_80x10.snap
---
source: crates/darius-tui/src/render.rs
expression: buffer_to_string(&buffer)
---
╭ Slash Commands ──────────────────────────────────────────────────────────────╮
│Commands                                                                      │
│❯ /model              Show current provider/model (read-only)                 │
│  /mode               Cycle or select auto/plan                               │
│  /permissions        Show the current permission policy                      │
│  /memory             Search durable memory                                   │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
