crates/darius-tui/src/snapshots/darius_tui__render__tests__welcome_card_80x24.snap
---
source: crates/darius-tui/src/render.rs
expression: buffer_to_string(&buffer)
---
╭◆ darius v1.3.0───────────────────────────────────────────────────────────────╮
│Welcome back                                                                  │
│model   gpt-4o-mini                                                           │
│cwd     ~/dev/project                                                         │
│profile default  ·  kernel rust  ·  /help                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
